@@ -94,6 +94,10 @@ private Q_SLOTS:
 	void testLinkSpreadsheetRecalculate();
 	void testLinkSpreadsheetSaveLoad();
 
+	// statistics spreadsheet
+	void testStatisticsSpreadsheetToggle();
+	void testStatisticsSpreadsheetChangeMetrics();
+
 #ifdef HAVE_VECTOR_BLF
 	void testLinkSpreadSheetImportBLF();
 #endif // HAVE_VECTOR_BLF
